k8s/istio/virtualservice-canary-10.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app-destination
  namespace: cricalgo-staging
spec:
  host: app.cricalgo-staging.svc.cluster.local
  subsets:
    - name: stable
      labels:
        version: stable
    - name: canary
      labels:
        version: canary
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-virtualservice-canary-10
  namespace: cricalgo-staging
spec:
  hosts:
  - "api.cricalgo-staging.example.com"
  http:
  - route:
    - destination:
        host: app.cricalgo-staging.svc.cluster.local
        subset: stable
      weight: 90
    - destination:
        host: app.cricalgo-staging.svc.cluster.local
        subset: canary
      weight: 10
    retries:
      attempts: 2
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream
    timeout: 30s
